--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "discordbothandler",
+  "name": "discord-js-handler-template",
   "version": "1.0.0",
-  "description": "",
+  "description": "Discord.js Command and Event Handler Template with example Command usages! For Questions: https://discord.gg/fS6qBSm",
   "main": "index.js",
-  "dependencies": {
-    "ascii-table": "^0.0.9",
-    "common-tags": "^1.8.0",
-    "discord.js": "^12.5.1",
-    "got": "^11.8.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "author": "Tomato#6966",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ascii-table": "0.0.9",
+    "discord.js": "^12.5.1"
+  },
+  "devDependencies": {
+    "ascii-table": "0.0.9",
+    "colors": "^1.4.0"
+  }
 }
