--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "ascii-table": "0.0.9",
-    "discord.js": "^12.5.1"
+    "discord.js": "^12.5.1",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "ascii-table": "0.0.9",
