--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "discord-js-handler-template",
+  "name": "v13musicbot",
   "version": "1.0.0",
-  "description": "Discord.js Command and Event Handler Template with example Command usages! For Questions: https://discord.gg/fS6qBSm",
+  "description": "A Discord Music Bot built with latest Discord Voice Features",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tomato#6966",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "github.com/Tomato6966/v13-music-bot"
+  },
+  "keywords": [
+    "Music",
+    "Bot",
+    "Discord",
+    "Discord-jsv13",
+    "v13",
+    "js",
+    "nodejs"
+  ],
+  "author": "Tomato6966",
+  "license": "MIT",
   "dependencies": {
-    "ascii-table": "0.0.9",
-    "discord.js": "^12.5.1",
+    "colors": "^1.4.0",
+    "discord.js": "^13.1.0",
     "moment": "^2.29.1"
-  },
-  "devDependencies": {
-    "ascii-table": "0.0.9",
-    "colors": "^1.4.0"
   }
 }
